--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Import des styles des composants */
+@import './styles/components.css';
+
 @layer base {
     html {
         font-family: 'Inter', system-ui, sans-serif;
